@@ -1,3 +1,6 @@
+9 January 2023: Wouter
+	- Fix python module install path detection.
+
 6 January 2023: Wouter
 	- Fix #823: Response change to NODATA for some ANY queries since
 	  1.12, tested on 1.16.1.
